[gd_scene load_steps=17 format=3 uid="uid://cy4br6liugwkc"]

[ext_resource type="PackedScene" uid="uid://daw71mdwu0amw" path="res://tools/entity_components/2d/sprite_component.tscn" id="1_d1fu4"]
[ext_resource type="Script" path="res://actors/top_down_2d/basic_enemy.gd" id="1_g7515"]
[ext_resource type="PackedScene" uid="uid://jmuqqfhupx52" path="res://tools/entity_components/2d/hitbox_component_2d.tscn" id="3_ewcu7"]
[ext_resource type="PackedScene" uid="uid://drphl5von85kh" path="res://tools/entity_components/general/health_component.tscn" id="3_roalg"]
[ext_resource type="Script" path="res://tools/damage_source.gd" id="4_18pou"]
[ext_resource type="PackedScene" uid="uid://dlwo41i4h04d6" path="res://tools/entity_components/2d/movement_component_2D.tscn" id="4_a4go3"]
[ext_resource type="PackedScene" uid="uid://43el6e2p3y7n" path="res://tools/entity_components/2d/hurtbox_component_2d.tscn" id="5_e6gpb"]
[ext_resource type="PackedScene" uid="uid://djrtixww2e2ul" path="res://tools/entity_components/experience_drop_component.tscn" id="5_yh4iu"]
[ext_resource type="PackedScene" uid="uid://baq3kixetclfi" path="res://tools/entity_components/2d/navigation_component_2d.tscn" id="6_nhqh3"]
[ext_resource type="PackedScene" uid="uid://boumuklbs2pdg" path="res://tools/entity_components/2d/death_component_2d.tscn" id="11_tjjyr"]
[ext_resource type="PackedScene" uid="uid://de8tj27whq7ri" path="res://tools/entity_components/2d/damage_number_component_2d.tscn" id="11_ty33a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w8afs"]
radius = 6.0
height = 12.0

[sub_resource type="Resource" id="Resource_isa37"]
script = ExtResource("4_18pou")
damage = 1
damage_types = Array[int]([1])

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5sgm1"]
radius = 4.5
height = 10.5

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fbnyj"]
load_path = "res://.godot/imported/sprite_sheet_imp_0_16x16.png-1cc113900c235a61f3320676373914d5.ctex"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v8b08"]
radius = 4.0
height = 10.0

[node name="basic_enemy" type="CharacterBody2D" groups=["enemies"]]
motion_mode = 1
script = ExtResource("1_g7515")

[node name="HurtboxComponent2D" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("5_e6gpb")]
position = Vector2(0, -3)
_health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent2D"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_w8afs")
debug_color = Color(0.772549, 0.411765, 0.439216, 0.419608)

[node name="HitboxComponent2D" parent="." instance=ExtResource("3_ewcu7")]
can_damage = 0
max_hits = -1
damage_source = SubResource("Resource_isa37")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxComponent2D"]
y_sort_enabled = true
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_5sgm1")
debug_color = Color(0.376471, 0.6, 0.360784, 0.419608)

[node name="SpriteComponent" parent="." instance=ExtResource("1_d1fu4")]
body_texture = SubResource("CompressedTexture2D_fbnyj")

[node name="HealthComponent" parent="." instance=ExtResource("3_roalg")]
max_health = 10

[node name="DeathComponent2D" parent="." node_paths=PackedStringArray("_sprite_component") instance=ExtResource("11_tjjyr")]
position = Vector2(0, -7)
_sprite_component = NodePath("../SpriteComponent")

[node name="ExperienceDropComponent" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("5_yh4iu")]
_health_component = NodePath("../HealthComponent")

[node name="MovementComponent2D" parent="." node_paths=PackedStringArray("_body", "_sprite_component") instance=ExtResource("4_a4go3")]
_body = NodePath("..")
_sprite_component = NodePath("../SpriteComponent")
max_speed = 25.0
acceleration = 3.0
movement_type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_v8b08")

[node name="NavigationComponent2D" parent="." node_paths=PackedStringArray("_movement_component") instance=ExtResource("6_nhqh3")]
_movement_component = NodePath("../MovementComponent2D")

[node name="DamageNumberComponent2D" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("11_ty33a")]
position = Vector2(0, -7)
_health_component = NodePath("../HealthComponent")
